--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 django = "*"
+flake8 = "*"
+django-bootstrap4 = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.6"
