Add Models to Bookmarks app
- Add Bookmarksapp to Installed apps
- Add Bookmarks Model
- Add Folders Model
- Add django_utils Pipfile
- Migrate the Models
- Remove Unused imports to follow flake8 guidelines
- Add Bookmarks, Folders Models to Admin site

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 flake8 = "*"
 django-bootstrap4 = "*"
 django-crispy-forms = "*"
+django-model-utils = "*"
 
 [requires]
 python_version = "3.6"
