--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flake8 = "*"
 django-bootstrap4 = "*"
 django-crispy-forms = "*"
 django-model-utils = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.6"
