--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,9 @@ django-bootstrap4 = "*"
 django-crispy-forms = "*"
 django-model-utils = "*"
 django-filter = "*"
+django-heroku = "*"
+whitenoise = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.6"
