--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-bootstrap4 = "*"
 django-crispy-forms = "*"
 django-model-utils = "*"
 django-filter = "*"
+faker = "*"
 
 [requires]
 python_version = "3.6"
